# ai_automata

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  ai_automata.spec  imgui.ini  pipeline.sh
ansible/: build_pipeline.yml
require/: coding_guidelines  project_architecture  project_guidelines  project_requirements  project_setup
require/epics/: epic1  epic2  epic2_manual_tests.md  epic3  epic3_manual_tests.md  epic4  epic4_manual_tests.md  epic5
src/: main.cpp
src/core/anns/: NeuralNetwork.cpp  NeuralNetwork.h
src/core/ca/: CellularAutomaton.cpp  CellularAutomaton.h  CellularAutomatonController.cpp  CellularAutomatonController.h  CellularAutomatonSimulation.cpp  CellularAutomatonSimulation.h
src/core/ga/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticOperations.cpp  GeneticOperations.h
src/gui/: MainWindow.cpp  MainWindow.h
src/math/: NeuralMath.cpp  NeuralMath.h
test/: CMakeLists.txt  test_math.cpp
test/core/anns/: test_NeuralNetwork.cpp  test_NeuralNetworkBackprop.cpp
test/core/ca/: test_CellularAutomaton.cpp  test_CellularAutomatonSimulation.cpp  test_CellularAutomatonSimulationEpic5.cpp
test/core/ga/: test_GeneticAlgorithm.cpp  test_GeneticAlgorithmIntegration.cpp  test_GeneticAlgorithmIntegrationMainWindow.cpp  test_GeneticOperations.cpp
test/math/: test_NeuralMath.cpp
test/mocks/anns/: MockNeuralNetwork.cpp  MockNeuralNetwork.h
test/mocks/ca/: MockCellularAutomaton.cpp  MockCellularAutomaton.h
